--- a/style.css
+++ b/style.css
@@ -6,38 +6,26 @@ body {
   background-color: blue;
 }
 
-#header:hover {
-  height: 200px;
-}
-
 .important {
   background-color: red;
-}
-
-.important:hover {
-  height: 200px;
 }
 
 .interesting {
   background-color: green;
 }
 
-.interesting:hover {
-  height: 200px;
-}
-
 .surprising {
   background-color: orange;
-}
-
-.surprising:hover {
-  height: 200px;
 }
 
 #footer {
   background-color: black;
 }
 
+#header:hover,
+.important:hover,
+.interesting:hover,
+.surprising:hover,
 #footer:hover {
   height: 200px;
 }
